--- a/src/main/resources/NhanVien.fxml
+++ b/src/main/resources/NhanVien.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
@@ -22,13 +21,22 @@
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
                     <children>
-                        <Button layoutY="131.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" style="-fx-font-size: 20;" styleClass="btn" text="Thống kê">
+                        <Button layoutY="131.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê">
                             <font>
-                                <Font size="22.0" />
+                                <Font size="16.0" />
                             </font></Button>
-                        <Button layoutY="331.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Button" />
-                        <Button layoutY="263.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Button" />
-                        <Button layoutY="195.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên" />
+                        <Button layoutY="331.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Button">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
+                        <Button layoutY="263.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Button">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
+                        <Button layoutY="195.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -45,6 +53,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
+
                      <children>
                         <TextField fx:id="maNhanVien" promptText="Mã nhân viên" styleClass="text-field-box" />
                         <TextField fx:id="hoNhanVien" prefHeight="26.0" prefWidth="220.0" promptText="Họ nhân viên" style="-fx-hgap: 10px;" styleClass="text-field-box" GridPane.rowIndex="1" />
@@ -57,24 +66,14 @@
                         <Button fx:id="add" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" styleClass="btn" text="Thêm" GridPane.rowIndex="3" />
                         <Button fx:id="update" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" styleClass="btn" text="Cập nhật" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Button fx:id="delete" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" styleClass="btn" text="xóa" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <HBox prefHeight="46.0" prefWidth="191.0" spacing="10.0" style="-fx-background-color: white;" styleClass="text-field-box" GridPane.columnIndex="2" GridPane.rowIndex="2">
-                           <children>
-                              <DatePicker fx:id="ngayVaoLam" prefHeight="22.0" prefWidth="207.0" promptText="Ngày vào làm" style="-fx-border-color: white;">
-                                 <HBox.margin>
-                                    <Insets bottom="1.0" left="6.0" right="1.0" top="3.0" />
-                                 </HBox.margin>
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
-                              </DatePicker>
-                           </children>
-                           <GridPane.margin>
-                              <Insets bottom="20.0" top="20.0" />
-                           </GridPane.margin>
-                        </HBox>
+                        <DatePicker fx:id="ngayVaoLam" prefHeight="22.0" prefWidth="207.0" promptText="Ngày vào làm" style="-fx-border-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </DatePicker>
                      </children>
                   </GridPane>
-                  <TableView fx:id="tableView" layoutY="269.0" prefHeight="303.0" prefWidth="726.0" AnchorPane.leftAnchor="0.0">
+                  <TableView fx:id="tableView" layoutY="262.0" prefHeight="317.0" prefWidth="741.0" AnchorPane.leftAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="maNhanVienColumn" prefWidth="101.6000549197197" text="Mã nhân viên" />
                       <TableColumn fx:id="hoNhanVienColumn" prefWidth="141.5999755859375" text="Họ " />
