--- a/src/main/resources/KhachHang.fxml
+++ b/src/main/resources/KhachHang.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
@@ -7,10 +9,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <Pane fx:id="khachHangPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.KhachHangController">
@@ -27,7 +28,7 @@
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutY="263.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách Hàng">
+                        <Button layoutY="263.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách Hàng ">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
@@ -39,49 +40,72 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <GridPane layoutX="-4.0" layoutY="24.0" prefHeight="222.0" prefWidth="734.0" style="-fx-padding: 20px; -fx-hgap: 20px;" AnchorPane.leftAnchor="-4.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.20001220703125" minWidth="10.0" prefWidth="371.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.20001220703125" minWidth="10.0" prefWidth="371.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.20001220703125" minWidth="10.0" prefWidth="371.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-
-                            <children>
-                                <TextField fx:id="txt_maKhachHang" alignment="TOP_LEFT" promptText="Mã Khách hàng" styleClass="text-field-box" />
-                                <TextField fx:id="txt_hoKhachHang" prefHeight="26.0" prefWidth="220.0" promptText="Họ Khách Hàng" style="-fx-hgap: 10px;" styleClass="text-field-box" GridPane.columnIndex="1" />
-                                <TextField fx:id="txt_tenKhachHang" promptText="Tên Khách Hàng " styleClass="text-field-box" GridPane.columnIndex="2" />
-                                <TextField fx:id="txt_diaChi" promptText="Địa chỉ" styleClass="text-field-box" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                <TextField fx:id="txt_emailKhachHang" promptText="Email" styleClass="text-field-box" GridPane.rowIndex="1" />
-                                <TextField fx:id="txt_sdtKhachHang" promptText="Số điện thoại" styleClass="text-field-box" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <TextField fx:id="txt_timKiemKhachHang" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <Button fx:id="btn_themKhachHang" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#themKhachHang" prefHeight="25.0" prefWidth="81.0" text="Thêm" GridPane.rowIndex="2" />
-                                <Button fx:id="btn_capNhatKhachHang" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Cập nhật" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <Button fx:id="btn_xoaKhachHang" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Xóa" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                                <Button fx:id="btn_timKiemKhachHang" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Tìm kiếm" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                                <Button fx:id="btn_danhSachKhachHang" mnemonicParsing="false" prefHeight="25.0" prefWidth="82.0" text="Danh sách" GridPane.rowIndex="3" />
-                            </children>
-                        </GridPane>
-                        <TableView fx:id="tableView" layoutY="262.0" prefHeight="317.0" prefWidth="741.0" AnchorPane.leftAnchor="0.0">
+                        <TableView fx:id="tableView" layoutY="196.0" prefHeight="384.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="maKhachHangColumn" prefWidth="101.6000549197197" text="Mã khách hàng" />
                                 <TableColumn fx:id="hoKhachHangColumn" prefWidth="141.5999755859375" text="Họ " />
                                 <TableColumn fx:id="tenKhachHangColumn" prefWidth="100.79997253417969" text="Tên" />
                                 <TableColumn fx:id="diaChiKhachHangColumn" prefWidth="139.20001220703125" text="Địa chỉ" />
-                                <TableColumn fx:id="emailKhachHangColumn" prefWidth="106.39996337890625" text="Email" />
+                                <TableColumn fx:id="emailColumn" prefWidth="106.39996337890625" text="Email" />
                                 <TableColumn fx:id="sdtKhachHangColumn" prefWidth="135.2000732421875" text="Số điện thoại" />
                             </columns>
                         </TableView>
+                        <TextField layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
+                        <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" styleClass="btn" text="Tìm kiếm" />
+                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false"  styleClass="btn" text="Thêm khách hàng" />
+                        <Pane fx:id="inforContainer" prefHeight="566.0" prefWidth="726.0">
+                            <children>
+                                <VBox fx:id="inforForm" layoutX="186.0" layoutY="65.0" prefHeight="302.0" prefWidth="400.0" spacing="15.0" styleClass="inforForm">
+                                    <children>
+                                        <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="txtMaKhachHang" prefHeight="25.0" prefWidth="375.0" promptText="Mã khách hàng" />
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets />
+                                            </VBox.margin>
+                                        </HBox>
+                                        <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="txtHoKhachHang" prefHeight="26.0" prefWidth="369.0" promptText="Họ tên lót" />
+                                            </children>
+                                        </HBox>
+                                        <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="txtTenKhachHang" prefHeight="26.0" prefWidth="369.0" promptText="Tên" />
+                                            </children>
+                                        </HBox>
+                                        <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="txtEmailKhachHang" prefHeight="25.0" prefWidth="369.0" promptText="Email" />
+                                                <TextField fx:id="txtSdtKhachHang" prefHeight="25.0" prefWidth="283.0" promptText="Thông tin liên lạc" />
+                                            </children>
+                                        </HBox>
+                                        <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="txtDiaChiKhachHang" prefHeight="25.0" prefWidth="424.0" promptText="Địa chỉ" />
+                                            </children>
+                                        </HBox>
+                                        <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+                                            <children>
+                                                <Button fx:id="btnAddKhachHang" mnemonicParsing="false"  text="Thêm" />
+                                                <Button mnemonicParsing="false" text="Đóng" />
+                                            </children>
+                                            <cursor>
+                                                <Cursor fx:constant="DEFAULT" />
+                                            </cursor>
+                                        </HBox>
+                                    </children>
+                                    <padding>
+                                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                                    </padding>
+                                </VBox>
+                            </children>
+                        </Pane>
                     </children>
                 </AnchorPane>
             </items>
         </SplitPane>
         <Accordion />
-        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Button" />
     </children>
 </Pane>
