--- a/src/main/resources/KhachHang.fxml
+++ b/src/main/resources/KhachHang.fxml
@@ -38,7 +38,7 @@
                             </font></Button>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane fx:id="khachHangAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" >
                     <children>
                         <TableView fx:id="tableView" layoutY="196.0" prefHeight="384.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
@@ -52,8 +52,8 @@
                         </TableView>
                         <TextField layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
                         <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" styleClass="btn" text="Tìm kiếm" />
-                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false"  styleClass="btn" text="Thêm khách hàng" />
-                        <Pane fx:id="inforContainer" prefHeight="566.0" prefWidth="726.0">
+                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false" styleClass="btn" text="Thêm khách hàng" />
+                        <Pane fx:id="inforContainerKhachHang" prefHeight="566.0" prefWidth="726.0">
                             <children>
                                 <VBox fx:id="inforForm" layoutX="186.0" layoutY="65.0" prefHeight="302.0" prefWidth="400.0" spacing="15.0" styleClass="inforForm">
                                     <children>
@@ -88,7 +88,7 @@
                                         </HBox>
                                         <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                                             <children>
-                                                <Button fx:id="btnAddKhachHang" mnemonicParsing="false"  text="Thêm" />
+                                                <Button fx:id="btnAddKhachHang" mnemonicParsing="false" text="Thêm" />
                                                 <Button mnemonicParsing="false" text="Đóng" />
                                             </children>
                                             <cursor>
