--- a/src/main/resources/TacGia.fxml
+++ b/src/main/resources/TacGia.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="nhanVienPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="tacGiaPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.TacGiaController">
     <children>
-        <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
+        <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-4.0" prefHeight="569.0" prefWidth="958.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
                     <children>
@@ -34,26 +34,35 @@
                             </font></Button>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="563.0" prefWidth="702.0">
                <children>
-                  <TableView layoutY="197.0" prefHeight="384.0" prefWidth="626.0">
+                  <TableView fx:id="tableView" layoutY="197.0" prefHeight="384.0" prefWidth="694.0">
                     <columns>
-                      <TableColumn prefWidth="124.00007629394531" text="Mã Tác Giả" />
-                      <TableColumn prefWidth="114.6666259765625" text="Họ" />
-                        <TableColumn prefWidth="130.66665649414062" text="Tên" />
-                        <TableColumn prefWidth="119.99993896484375" text="Năm Sinh" />
-                        <TableColumn prefWidth="122.00006103515625" text="Quê Quán" />
+                      <TableColumn fx:id="maTacGiaColumn" prefWidth="124.00007629394531" text="Mã Tác Giả" />
+                      <TableColumn fx:id="hoTacGiaColumn" prefWidth="139.33331298828125" text="Họ" />
+                        <TableColumn fx:id="tenTacGiaColumn" prefWidth="132.66668701171875" text="Tên" />
+                        <TableColumn fx:id="queQuanTacGiaColumn" prefWidth="165.3333740234375" text="Quê Quán" />
+                        <TableColumn fx:id="namSinhTacGiaColumn" prefWidth="128.66668701171875" text="Năm Sinh" />
                     </columns>
                   </TableView>
-                  <TextField layoutX="24.0" layoutY="23.0" prefHeight="36.0" prefWidth="156.0" promptText="Mã Tác Giả" />
-                  <Button layoutX="85.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Thêm" />
-                  <TextField layoutX="24.0" layoutY="79.0" prefHeight="36.0" prefWidth="156.0" promptText="Năm Sinh" />
-                  <TextField layoutX="212.0" layoutY="23.0" prefHeight="36.0" prefWidth="156.0" promptText="Họ" />
-                  <TextField layoutX="212.0" layoutY="79.0" prefHeight="36.0" prefWidth="156.0" promptText="Quê Quán" />
-                  <TextField layoutX="398.0" layoutY="23.0" prefHeight="36.0" prefWidth="149.0" promptText="Tên" />
-                  <Button layoutX="212.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Sửa" />
-                  <Button layoutX="326.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Xóa" />
-                  <Button layoutX="447.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Tìm Kiếm" />
+                  <TextField fx:id="textFieldTimKiem" layoutX="24.0" layoutY="23.0" prefHeight="25.0" prefWidth="122.0" promptText="Tìm kiếm..." />
+                  <Button layoutX="156.0" layoutY="23.0" mnemonicParsing="false" onAction="#timKiem" prefHeight="25.0" prefWidth="72.0" text="Tìm Kiếm" />
+                  <Button layoutX="573.0" layoutY="149.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
+                  <AnchorPane fx:id="inforContainer" layoutX="-2.0" layoutY="2.0" prefHeight="569.0" prefWidth="635.0">
+                     <children>
+                        <Pane fx:id="inforFormTacGia" layoutX="189.0" layoutY="122.0" prefHeight="212.0" prefWidth="279.0">
+                           <children>
+                              <TextField fx:id="txt_MaTacGia" layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="122.0" promptText="Mã Tác Giả" />
+                              <TextField fx:id="txt_HoTacGia" layoutX="14.0" layoutY="76.0" prefHeight="25.0" prefWidth="122.0" promptText="Họ Tác Giả" />
+                              <TextField fx:id="txt_NamSinhTacGia" layoutX="143.0" layoutY="125.0" prefHeight="25.0" prefWidth="122.0" promptText="Năm Sinh" />
+                              <TextField fx:id="txt_TacGia" layoutX="143.0" layoutY="76.0" prefHeight="25.0" prefWidth="122.0" promptText="Tên Tác Giả" />
+                              <TextField fx:id="txt_QueQuanTacGia" layoutX="14.0" layoutY="125.0" prefHeight="25.0" prefWidth="122.0" promptText="Quê Quán" />
+                              <Button fx:id="btnAddTacGia" layoutX="75.0" layoutY="165.0" mnemonicParsing="false" onAction="#addTacGia" text="Thêm" />
+                              <Button layoutX="140.0" layoutY="165.0" mnemonicParsing="false" onAction="#clossInforContainer" text="Đóng" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
                </children>
                 </AnchorPane>
             </items>
