--- a/src/main/resources/NhaCungCap.fxml
+++ b/src/main/resources/NhaCungCap.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="nhanVienPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.NhaCungCapController">
+<Pane fx:id="nhanVienPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.NhaCungCapController">
     <children>
         <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
             <items>
@@ -46,7 +45,6 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                          <Button fx:id="btnThemNCC" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="26.0" prefWidth="726.0" styleClass="btn" text="Thêm Nhà Cung Cấp" />
                         <TableView fx:id="tableView" layoutY="171.0" prefHeight="409.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="maNCCColumn" prefWidth="148.8000060915947" text="Mã nhà cung cấp" />
@@ -58,42 +56,35 @@
                         </TableView>
                         <TextField fx:id="textFieldTimKiem" layoutX="37.0" layoutY="32.0" prefHeight="30.0" prefWidth="174.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
                         <Button layoutX="238.0" layoutY="35.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
-                        <Pane fx:id="inforBookContainer" prefHeight="566.0" prefWidth="726.0" AnchorPane.leftAnchor="0.0">
+                          <Button fx:id="btnThemNCC" layoutX="515.0" layoutY="126.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="26.0" prefWidth="151.0" styleClass="btn" text="Thêm Nhà Cung Cấp" />
+                        <Pane fx:id="inforContainer" layoutY="-112.0" prefHeight="676.0" prefWidth="850.0">
                             <children>
-                                <Pane layoutX="168.0" layoutY="59.0" prefHeight="486.0" prefWidth="326.0">
-                                    <children>
-                                        <VBox prefHeight="486.0" prefWidth="326.0" spacing="20.0">
-                                            <children>
-                                                <Label alignment="CENTER" prefHeight="69.0" prefWidth="312.0" text="THÊM NHÀ CUNG CẤP" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
-                                                    <font>
-                                                        <Font size="14.0" />
-                                                    </font>
-                                                </Label>
-                                                <TextField fx:id="textFieldMaNCC" prefHeight="48.0" prefWidth="309.0" promptText="Mã nhà cung cấp" />
-                                                <TextField fx:id="textFieldTenNCC" prefHeight="48.0" prefWidth="309.0" promptText="Tên nhà cung cấp" />
-                                                <TextField fx:id="textFieldSDT" prefHeight="48.0" prefWidth="309.0" promptText="Số điện thoại" />
-                                                <TextField fx:id="textFieldDiaChi" prefHeight="48.0" prefWidth="309.0" promptText="Địa chỉ" />
-                                                <TextField fx:id="textFieldEmail" prefHeight="48.0" prefWidth="309.0" promptText="Email" />
-                                                <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                                    <children>
-                                                        <Button fx:id="btnAddNCC" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNhaCungCap" prefHeight="70.0" prefWidth="98.0" text="Thêm" />
-                                                        <Button fx:id="btnThoatFormNCC" mnemonicParsing="false" onAction="#clossInforContainer" prefHeight="70.0" prefWidth="98.0" text="Thoát" />
-                                                    </children>
-                                                    <padding>
-                                                        <Insets bottom="30.0" top="30.0" />
-                                                    </padding>
-                                                </HBox>
-                                            </children>
-                                            <padding>
-                                                <Insets left="20.0" right="20.0" />
-                                            </padding>
-                                        </VBox>
-                                    </children>
-                                    <styleClass>
-                                        <String fx:value="form-container" />
-                                        <String fx:value="inforForm" />
-                                    </styleClass>
-                                </Pane>
+                                  <VBox layoutX="191.0" layoutY="152.0" prefHeight="486.0" prefWidth="326.0" spacing="20.0" styleClass="inforForm">
+                                      <children>
+                                          <Label alignment="CENTER" prefHeight="69.0" prefWidth="312.0" text="THÊM NHÀ CUNG CẤP" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+                                              <font>
+                                                  <Font size="14.0" />
+                                              </font>
+                                          </Label>
+                                          <TextField fx:id="textFieldMaNCC" prefHeight="48.0" prefWidth="309.0" promptText="Mã nhà cung cấp" />
+                                          <TextField fx:id="textFieldTenNCC" prefHeight="48.0" prefWidth="309.0" promptText="Tên nhà cung cấp" />
+                                          <TextField fx:id="textFieldSDT" prefHeight="48.0" prefWidth="309.0" promptText="Số điện thoại" />
+                                          <TextField fx:id="textFieldDiaChi" prefHeight="48.0" prefWidth="309.0" promptText="Địa chỉ" />
+                                          <TextField fx:id="textFieldEmail" prefHeight="48.0" prefWidth="309.0" promptText="Email" />
+                                          <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                              <children>
+                                                  <Button fx:id="btnAddNhaCungCap" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNhaCungCap" prefHeight="70.0" prefWidth="98.0" text="Thêm" />
+                                                  <Button fx:id="btnThoatFormNCC" mnemonicParsing="false" onAction="#clossInforContainer" prefHeight="70.0" prefWidth="98.0" text="Thoát" />
+                                              </children>
+                                              <padding>
+                                                  <Insets bottom="30.0" top="30.0" />
+                                              </padding>
+                                          </HBox>
+                                      </children>
+                                      <padding>
+                                          <Insets left="20.0" right="20.0" />
+                                      </padding>
+                                  </VBox>
                             </children>
                         </Pane>
                     </children>
