--- a/src/main/resources/NhaCungCap.fxml
+++ b/src/main/resources/NhaCungCap.fxml
@@ -46,7 +46,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                          <Button fx:id="btnThemNCC" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="26.0" prefWidth="726.0" styleClass="btn" text="Thêm Nhà Cung Cấp" />
+                          <Button fx:id="btnThemNCC" layoutX="549.0" layoutY="114.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="26.0" prefWidth="162.0" styleClass="btn" text="Thêm Nhà Cung Cấp" />
                         <TableView fx:id="tableView" layoutY="171.0" prefHeight="409.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="maNCCColumn" prefWidth="148.8000060915947" text="Mã nhà cung cấp" />
@@ -60,7 +60,7 @@
                         <Button layoutX="238.0" layoutY="35.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
                         <Pane fx:id="inforBookContainer" prefHeight="566.0" prefWidth="726.0" AnchorPane.leftAnchor="0.0">
                             <children>
-                                <Pane layoutX="168.0" layoutY="59.0" prefHeight="486.0" prefWidth="326.0">
+                                <Pane layoutX="162.0" layoutY="69.0" prefHeight="476.0" prefWidth="332.0">
                                     <children>
                                         <VBox prefHeight="486.0" prefWidth="326.0" spacing="20.0">
                                             <children>
@@ -76,7 +76,7 @@
                                                 <TextField fx:id="textFieldEmail" prefHeight="48.0" prefWidth="309.0" promptText="Email" />
                                                 <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                                                     <children>
-                                                        <Button fx:id="btnAddNCC" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNhaCungCap" prefHeight="70.0" prefWidth="98.0" text="Thêm" />
+                                                        <Button fx:id="btnAddNhaCungCap" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNhaCungCap" prefHeight="70.0" prefWidth="98.0" text="Thêm" />
                                                         <Button fx:id="btnThoatFormNCC" mnemonicParsing="false" onAction="#clossInforContainer" prefHeight="70.0" prefWidth="98.0" text="Thoát" />
                                                     </children>
                                                     <padding>
