--- a/src/main/resources/KhachHang.fxml
+++ b/src/main/resources/KhachHang.fxml
@@ -46,7 +46,7 @@
                                 <TableColumn fx:id="hoKhachHangColumn" prefWidth="141.5999755859375" text="Họ " />
                                 <TableColumn fx:id="tenKhachHangColumn" prefWidth="100.79997253417969" text="Tên" />
                                 <TableColumn fx:id="diaChiKhachHangColumn" prefWidth="139.20001220703125" text="Địa chỉ" />
-                                <TableColumn fx:id="emailColumn" prefWidth="106.39996337890625" text="Email" />
+                                <TableColumn fx:id="emailKhachHangColumn" prefWidth="106.39996337890625" text="Email" />
                                 <TableColumn fx:id="sdtKhachHangColumn" prefWidth="135.2000732421875" text="Số điện thoại" />
                             </columns>
                         </TableView>
