khuyen mai theo hoa don

--- a/src/main/resources/KmtheoSanPham.fxml
+++ b/src/main/resources/KmtheoSanPham.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="nhanVienPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.NhanVienController">
+<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
             <items>
@@ -43,60 +42,50 @@
                     <children>
                         <TableView fx:id="tableView" layoutY="196.0" prefHeight="384.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="maNhanVienColumn" prefWidth="101.6000549197197" text="Mã nhân viên" />
-                                <TableColumn fx:id="hoNhanVienColumn" prefWidth="141.5999755859375" text="Họ " />
-                                <TableColumn fx:id="tenNhanVienColumn" prefWidth="100.79997253417969" text="Tên" />
-                                <TableColumn fx:id="chucVuNhanVienColumn" prefWidth="139.20001220703125" text="Chức vụ" />
-                                <TableColumn fx:id="luongNhanVienColumn" prefWidth="106.39996337890625" text="Lương" />
-                                <TableColumn fx:id="sdtNhanVienColumn" prefWidth="135.2000732421875" text="Số điện thoại" />
+                                <TableColumn fx:id="maChuongTrinhKMColumn" prefWidth="251.3333282470703" text="Mã Chương Trình Khuyến Mãi" />
+                                <TableColumn fx:id="maSanPhamColumn" prefWidth="217.3333740234375" text="Mã Sản Phẩm" />
+                                <TableColumn fx:id="phanTramKMColumn" prefWidth="219.33331298828125" text="\% Khuyến Mãi" />
                             </columns>
                         </TableView>
-                        <TextField layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
-                        <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" styleClass="btn" text="Tìm kiếm" />
-                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false" onAction="#openInforContainer" styleClass="btn" text="Thêm nhân viên" />
-                        <Pane fx:id="inforContainer" prefHeight="566.0" prefWidth="726.0">
+                        <TextField fx:id="textFieldTimKiem" layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
+                        <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
+                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false" onAction="#openInforContainer" styleClass="btn" text="Thêm" />
+                        <Pane fx:id="inforContainer" layoutX="-2.0" prefHeight="567.0" prefWidth="984.0">
                             <children>
-                                <VBox fx:id="inforForm" layoutX="186.0" layoutY="65.0" prefHeight="302.0" prefWidth="400.0" spacing="15.0" styleClass="inforForm">
+                                <VBox fx:id="inforForm" layoutX="219.0" layoutY="75.0" prefHeight="188.0" prefWidth="273.0" spacing="15.0" styleClass="inforForm">
                                     <children>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
-                                            <children>
-                                                <TextField fx:id="textFieldMaNhanVien" prefHeight="26.0" prefWidth="140.0" promptText="Mã nhân viên" />
-                                                <TextField fx:id="textFieldSoCCCD" prefHeight="26.0" prefWidth="250.0" promptText="Số cccd" />
-                                            </children>
                                             <VBox.margin>
                                                 <Insets />
                                             </VBox.margin>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-                                                <TextField fx:id="textFieldHoNhanVien" prefHeight="26.0" prefWidth="369.0" promptText="Họ tên lót" />
+                                                <TextField fx:id="txt_maChuongTrinhKhuyenMai" prefHeight="26.0" prefWidth="234.0" promptText="Mã Chương Trình Khyến Mãi" />
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-                                                <TextField fx:id="textFieldTenNhanVien" prefHeight="26.0" prefWidth="369.0" promptText="Tên" />
+                                                <TextField fx:id="txt_maSanPham" prefHeight="26.0" prefWidth="235.0" promptText="Mã Sản Phẩm" />
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-                                                <TextField fx:id="textFieldChucVu" prefHeight="26.0" prefWidth="141.0" promptText="Chức vụ" />
-                                                <TextField fx:id="textFieldThongTinLienLac" prefHeight="26.0" prefWidth="250.0" promptText="Thông tin liên lạc" />
+                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="234.0" promptText="\% Khuyến Mãi" />
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-                                                <TextField fx:id="textFieldLuongNhanVien" prefHeight="26.0" prefWidth="120.0" promptText="Lương" />
-                                                <DatePicker fx:id="datePickerNgayVaoLam" prefHeight="26.0" prefWidth="230.0" promptText="Ngày vào làm" />
+                                                <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+                                                    <children>
+                                                        <Button fx:id="btnAddKM" mnemonicParsing="false" onAction="#addKhuyenMai" text="Thêm" />
+                                                        <Button mnemonicParsing="false" onAction="#clossInforContainer" text="Đóng" />
+                                                    </children>
+                                                    <cursor>
+                                                        <Cursor fx:constant="DEFAULT" />
+                                                    </cursor>
+                                                </HBox>
                                             </children>
-                                        </HBox>
-                                        <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
-                                            <children>
-                                                <Button fx:id="btnAddNhanVien" mnemonicParsing="false" onAction="#addNhanVien" text="Thêm" />
-                                                <Button mnemonicParsing="false" onAction="#clossInforContainer" text="Đóng" />
-                                            </children>
-                                            <cursor>
-                                                <Cursor fx:constant="DEFAULT" />
-                                            </cursor>
                                         </HBox>
                                     </children>
                                     <padding>
