--- a/src/main/resources/TacGia.fxml
+++ b/src/main/resources/TacGia.fxml
@@ -37,21 +37,21 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="563.0" prefWidth="702.0">
                <children>
-                  <TableView fx:id="tableView" layoutY="197.0" prefHeight="384.0" prefWidth="694.0">
+                  <TableView fx:id="tableView" layoutY="197.0" prefHeight="384.0" prefWidth="725.0">
                     <columns>
                       <TableColumn fx:id="maTacGiaColumn" prefWidth="124.00007629394531" text="Mã Tác Giả" />
                       <TableColumn fx:id="hoTacGiaColumn" prefWidth="139.33331298828125" text="Họ" />
                         <TableColumn fx:id="tenTacGiaColumn" prefWidth="132.66668701171875" text="Tên" />
                         <TableColumn fx:id="queQuanTacGiaColumn" prefWidth="165.3333740234375" text="Quê Quán" />
-                        <TableColumn fx:id="namSinhTacGiaColumn" prefWidth="128.66668701171875" text="Năm Sinh" />
+                        <TableColumn fx:id="namSinhTacGiaColumn" prefWidth="160.66664632161462" text="Năm Sinh" />
                     </columns>
                   </TableView>
                   <TextField fx:id="textFieldTimKiem" layoutX="24.0" layoutY="23.0" prefHeight="25.0" prefWidth="122.0" promptText="Tìm kiếm..." />
                   <Button layoutX="156.0" layoutY="23.0" mnemonicParsing="false" onAction="#timKiem" prefHeight="25.0" prefWidth="72.0" text="Tìm Kiếm" />
                   <Button layoutX="573.0" layoutY="149.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
-                  <AnchorPane fx:id="inforContainer" layoutX="-2.0" layoutY="2.0" prefHeight="569.0" prefWidth="670.0">
+                  <AnchorPane fx:id="inforContainer" layoutX="-3.0" layoutY="2.0" prefHeight="569.0" prefWidth="762.0">
                      <children>
-                        <Pane fx:id="inforFormTacGia" layoutX="189.0" layoutY="122.0" prefHeight="212.0" prefWidth="279.0" styleClass="inforForm">
+                        <Pane fx:id="inforFormTacGia" layoutX="226.0" layoutY="101.0" prefHeight="212.0" prefWidth="279.0" styleClass="inforForm">
                            <children>
                               <TextField fx:id="txt_MaTacGia" layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="249.0" promptText="Mã Tác Giả" />
                               <TextField fx:id="txt_HoTacGia" layoutX="14.0" layoutY="76.0" prefHeight="25.0" prefWidth="122.0" promptText="Họ Tác Giả" />
@@ -72,6 +72,6 @@
                 </AnchorPane>
             </items>
         </SplitPane>
-        <Accordion />
+        <Accordion fx:id="inforFormButtonContainer" />
     </children>
 </Pane>
